--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                             </div>
                             <div class="calendy2">
                                 <!-- Calendly inline widget begin -->
-                                <div class="calendly-inline-widget"
+                                <!-- <div class="calendly-inline-widget"
                                     data-url="https://calendly.com/gerrykoh-lampaug/30min"
                                     style="min-width:320px;height:700px;"></div>
                                 <script type="text/javascript"
-                                    src="https://assets.calendly.com/assets/external/widget.js" async></script>
+                                    src="https://assets.calendly.com/assets/external/widget.js" async></script> -->
                                 <!-- Calendly inline widget end -->
                             </div>
 
@@ -71,7 +71,76 @@
             </div>
         </section>
 
-        <section class="section-1">
+        <section class="section-2">
+            <div class="container">
+                <div class="container-fluid text-center">
+                    <div class="div1">
+                        <h2>Florida Mortgage Rates Today</h2>
+                        <br>
+                        <div class="mortgage-rates d-flex justify-content-center">
+                            <div>
+                                <p>15Yr fixed</p>
+                                <p>
+                                    <strong>
+                                        <span>5.500%</span>
+                                        <br>
+                                        5.812% APR
+                                    </strong>
+                                </p>
+                            </div>
+                            <div>
+                                <p>15Yr fixed</p>
+                                <p>
+                                    <strong>
+                                        <span>5.500%</span>
+                                        <br>
+                                        5.812% APR
+                                    </strong>
+                                </p>
+                            </div>
+                            <div>
+                                <p>15Yr fixed</p>
+                                <p>
+                                    <strong>
+                                        <span>5.500%</span>
+                                        <br>
+                                        5.812% APR
+                                    </strong>
+                                </p>
+                            </div>
+                        </div>
+                        <br><br>
+                        <a href="" class="btn">Get your quote</a>
+                    </div>
+
+                    <br><br><br>
+
+                    <div class="div2">
+                        <h2><strong>Removing Mortgage <span>Hassles</span> Since the Year 2000.</strong> </h2>
+                        <br><br>
+                        <div class="d-flex">
+                            <div>
+                                <img src="/img/top-notch.png" alt="">
+                                <p><strong>Top-Notch Mortgage Rates</strong></p>
+                                <br>
+                                <p>Unlock the best mortgage rates with a broker. In this volatile market, every cent matters.</p>
+                            </div>
+                            <div>
+                                <img src="/img/24-7-Accessibility.png" alt="">
+                                <p><strong>24/7 Accessibility</strong></p>
+                                <br>
+                                <p>Whether it's day or night, I'm at your service. Say goodbye to rigid banking hours; reaching me is effortless. Let's sync calendars.</p>
+                            </div>
+                            <div>
+                                <img src="/img/guidance.png" alt="">
+                                <p><strong>Direct Guidance</strong></p>
+                                <br>
+                                <p>I don't hold back and I'm skilled at my craft. I dedicate the time to steer you cl early through the homebuying process.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
